--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,14 +2,16 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Times New Roman", Times, serif;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 /* #region Header */
+
 header {
   display: flex;
   justify-content: center;
-  height: 100px;
+  height: 80px;
+  background-color: #2f3136;
 }
 
 .container {
@@ -17,4 +19,110 @@ header {
   justify-content: space-between;
   width: 990px;
 }
+.logo {
+  color: #d1d1c1;
+}
+.logo,
+.menu {
+  display: flex;
+  align-items: center;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
+.menuMobile {
+  display: none;
+  width: 40px;
+  height: 40px;
+  margin: 40px 20px 40px 0;
+}
+
+.mm_line {
+  height: 3px;
+  background-color: #39aae1;
+}
+
+nav ul {
+  display: flex;
+}
+
+nav a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #d1d1c1;
+  font-size: 18px;
+  padding: 10px;
+  transition: 0.3s;
+}
+
+nav a:hover {
+  background: #0071b7;
+  color: #fff;
+}
+/* #endregion */
+
+/* #region FormPage */
+
+#formPage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 670px;
+}
+
+h1 {
+  text-align: center;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: aqua;
+  min-height: 500px;
+}
+
+.required:after {
+  content: ' *';
+  color: #f00;
+}
+
+.column {
+  flex-direction: column;
+}
+
+.columnForm {
+  padding: 10px;
+  flex-direction: column;
+}
+
+form ul {
+  display: flex;
+}
+
+form li {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  padding: 5px;
+}
+
+form label {
+  font-size: 16px;
+  margin-right: 10px;
+}
+
+form input {
+  font-family: Arial, Helvetica, sans-serif;
+  width: 300px;
+  height: 30px;
+  border: 1px solid #d1d1c1;
+  border-radius: 5px;
+  padding: 5px;
+}
+
 /* #endregion */
